--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "p5": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
